# rankedvoting

./: .gitignore  pyproject.toml
examples/: condorcet-cycle.json  council-pl.json  council.json  mayor-irv-condorcet-different.json  mayor.json
rankedvoting/: __main__.py  base.py  btr_irv.py  condorcet.py  mmp.py  pr2stv.py  proportional.py  stv.py
